fixes toggling display colors on mobile.

--- a/src/component/calculator/calculator.scss
+++ b/src/component/calculator/calculator.scss
@@ -7,7 +7,6 @@
   border: 2px solid black;
   border-radius: 10px 10px 0 0;
   background-color: #7e7e7e;
-  // box-shadow: inset 0 0 20px 0 black;
   box-shadow: inset 0px 5px 10px black;
   position: relative;
   z-index: 1000;
@@ -16,35 +15,27 @@
 .info {
   width: 100%;
   margin-bottom: 5%;
-  // padding-right: 12%;
-  // padding-left: 12%;
   display: flex;
   justify-content: space-between;
-  // align-items: center;
-  // flex-wrap: wrap;
-
-  // outline: 2px solid red;
+  align-items: center;
 }
 
 .help-btn {
   width: 70px;
-  height: 30px;
-  margin-left: 11%;
+  height: 1.5rem;
+  margin-left: 12%;
   display: flex;
   justify-content: center;
   position: relative;
   overflow-x: hidden;
   border-radius: 5px;
-
-  // outline: 2px solid red;
   &:hover {
     cursor: pointer;
   }
 }
 
 .model {
-  margin-right: 11%;
-  // outline: 2px solid red;
+  margin-right: 12%;
 }
 .help-btn,
 .model {
@@ -69,9 +60,11 @@
 }
 
 .help-btn__title {
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  width: 66px;
   display: flex;
   justify-content: center;
-  width: 66px;
   position: absolute;
   z-index: 1000;
   border: 1px solid white;
@@ -79,18 +72,21 @@
 }
 
 .description {
-  // width: 100%;
-  // margin: 5% 0 10% 0;
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
   background-color: rgb(145, 145, 145);
   transition: all 0.3s ease-in-out;
-  transform: translateY(-80%);
+  transform: translateY(-82%);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border: 1px solid black;
   &--open {
-    transform: translateY(-2%);
+    transform: translateY(-1%);
+  }
+  & kbd {
+    background-color: dimgray;
+    padding: 1% 2%;
+    border-radius: 5px;
   }
 }
 
@@ -106,20 +102,20 @@
   border: 2px solid black;
   box-shadow: inset 0 10px 5px -5px rgba(0, 0, 0, 0.5),
               inset 0 -10px 5px -5px rgba(0, 0, 0, 0.5);
+
+  & li:not(:last-child) {
+    margin-bottom: 2%;
+  }
+
   @media (max-width: 500px) {
     font-size: 1rem;
   }
-
 }
 
 .description__bottom {
-  // width: 100%;
   height: 50px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   background-color: #7e7e7e;
-  // box-shadow: inset 0 0 20px 0 black;
   box-shadow: inset 0px -5px 10px;
-              // inset 0 5px 10px;
-  // border: 2px solid black;
 }
