--- a/src/component/display-colors/display-colors.scss
+++ b/src/component/display-colors/display-colors.scss
@@ -1,8 +1,3 @@
-@keyframes blink {
-  0%   {opacity: 0.1; background: white;}
-  100% {opacity: 1; background: white;}
-}
-
 .onoff-solar {
   width: 100%;
   margin-bottom: 5%;
@@ -26,9 +21,6 @@
       &:hover {
         cursor: pointer;
         opacity: 1;
-      }
-      &:active {
-        animation: blink 0.1s;
       }
       &--active {
         opacity: 1;
